fix pom, versions, and upgrade all tests to junit5 and fix few failed tests