@@ -4,67 +4,50 @@ import beast.base.evolution.datatype.DataType;
 import beast.base.evolution.datatype.DataType.Base;
 import beast.pkgmgmt.BEASTClassLoader;
 
-//import org.junit.jupiter.api.BeforeAll;
-//import org.junit.jupiter.api.Test;
-//import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
-import org.junit.BeforeClass;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
-
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Stream;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-@RunWith(Parameterized.class)
 public class DataTypeTest {
-    private Base dataType;
-    private String sequence;
-    private List<Integer> codes;
 
-    public DataTypeTest(Base dataType, String sequence, List<Integer> codes) {
-        this.dataType = dataType;
-        this.sequence = sequence;
-        this.codes = codes;
-    }
-
-
-    @Parameterized.Parameters
-    public static Collection<Object[]> typestrings() {
+    static Stream<Arguments> typestrings() {
         NucleotideMethylation NucMeth = new NucleotideMethylation();
         NucleotideDiploid10 dataNucleotide10 = new NucleotideDiploid10();
         NucleotideDiploid16 dataNucleotide16 = new NucleotideDiploid16();
         Ternary TernaryType = new Ternary();
 
-        return Arrays.asList(new Object[][] {
-                { NucMeth, "ACGTPJO1WNX-?", Arrays.asList(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12) },
-                { dataNucleotide10, "AMRWCSYGKT-?", Arrays.asList(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11) },
-                { dataNucleotide16, "0123456789ABCDEFMRWSYK-?", Arrays.asList(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23) },
-                { TernaryType, "012-?", Arrays.asList(0, 1, 2, 3, 4) }
-        });
+        return Stream.of(
+                Arguments.of(NucMeth, "ACGTPJO1WNX-?", List.of(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12)),
+                Arguments.of(dataNucleotide10, "AMRWCSYGKT-?", List.of(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11)),
+                Arguments.of(dataNucleotide16, "0123456789ABCDEFMRWSYK-?", List.of(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23)),
+                Arguments.of(TernaryType, "012-?", List.of(0, 1, 2, 3, 4))
+        );
     }
 
     @Test
     public void testDataTypes() {
         Set<String> dataTypes = BEASTClassLoader.loadService(DataType.class);
-//        System.out.println(dataTypes);
-        assertTrue("NucleotideDiploid10", dataTypes.contains("phylonco.beast.evolution.datatype.NucleotideDiploid10"));
-        assertTrue("NucleotideDiploid16", dataTypes.contains("phylonco.beast.evolution.datatype.NucleotideDiploid16"));
+        assertTrue(dataTypes.contains("phylonco.beast.evolution.datatype.NucleotideDiploid10"), "NucleotideDiploid10");
+        assertTrue(dataTypes.contains("phylonco.beast.evolution.datatype.NucleotideDiploid16"), "NucleotideDiploid16");
     }
 
-    @Test
-    public void testStringToEncoding() {
+    @ParameterizedTest
+    @MethodSource("typestrings")
+    public void testStringToEncoding(Base dataType, String sequence, List<Integer> codes) {
         assertEquals(codes, dataType.stringToEncoding(sequence));
     }
 
-
-    @Test
-    public void testRoundTrip() {
+    @ParameterizedTest
+    @MethodSource("typestrings")
+    public void testRoundTrip(Base dataType, String sequence, List<Integer> codes) {
         assertEquals(sequence, dataType.encodingToString(dataType.stringToEncoding(sequence)));
     }
 }
